--- a/manifests/grafana-config.yaml
+++ b/manifests/grafana-config.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-config
-  namespace: charon
+  namespace: $NAMESPACE
 data:
   dashboards.yaml: |
     apiVersion: 1
