--- a/manifests/grafana.yaml
+++ b/manifests/grafana.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: grafana
   name: grafana
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   replicas: 1
   selector:
@@ -54,7 +54,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   selector:
     app: grafana
