--- a/manifests/prometheus-config.yaml
+++ b/manifests/prometheus-config.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: charon
+  namespace: $NAMESPACE
 data:
   prometheus.yaml: |
     global:
