--- a/manifests/prometheus.yaml
+++ b/manifests/prometheus.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: prometheus
   name: prometheus
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   replicas: 1
   selector:
@@ -40,7 +40,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   selector:
     app: prometheus
