--- a/manifests/teku.yaml
+++ b/manifests/teku.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: teku
   name: teku
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   replicas: 1
   selector:
@@ -91,13 +91,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: teku
-  namespace: charon
+  namespace: $NAMESPACE
   labels:
     app: teku
 spec:
   selector:
     app: teku
-  ports:
   ports:
     - name: metrics
       protocol: TCP
@@ -108,7 +107,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: teku
-  namespace: charon
+  namespace: $NAMESPACE
 spec:
   selector:
     matchLabels:
