--- a/manifests/charon-config.yaml
+++ b/manifests/charon-config.yaml
@@ -12,7 +12,7 @@ data:
   CHARON_P2P_BOOTNODE_RELAY: "true"
   CHARON_P2P_BOOTNODES: "http://bootnode.lb.gcp.obol.tech:3640/enr"
   CHARON_BEACON_NODE_ENDPOINTS: $BEACON_NODE_ENDPOINTS
-  CHARON_DATA_DIR: "/charon"
+  CHARON_DATA_DIR: "/charon/charon"
   CHARON_LOCK_FILE: "/charon/cluster-lock.json"
   CHARON_P2P_EXTERNAL_HOSTNAME: ""
   CHARON_LOG_LEVEL: "debug"
