--- a/manifests/prom-agent.yaml
+++ b/manifests/prom-agent.yaml
@@ -1,33 +1,11 @@
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: prometheus
-  namespace: $CLUSTER_NAME
-data:
-  prometheus.yaml: |
-    global:
-      scrape_interval:     30s # Set the scrape interval to every 30 seconds.
-      evaluation_interval: 30s # Evaluate rules every 30 seconds.
-    remote_write:
-      - url: https://vm.monitoring.gcp.obol.tech/write
-        authorization:
-          credentials: $MONITORING_TOKEN
-    scrape_configs:
-      - job_name: 'charon'
-        static_configs:
-          - targets: ['charon:3620']
-      - job_name: 'teku'
-        static_configs:
-          - targets: ['teku:8008']   
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: prometheus
   name: prometheus
-  namespace: $CLUSTER_NAME
+  namespace: $NAME_SPACE
 spec:
   replicas: 1
   selector:
@@ -44,9 +22,7 @@ spec:
         runAsUser: 0
       containers:
         - name: prometheus
-          image: prom/prometheus:v2.38.0
-          args:
-            - "-.file=/etc/prometheus/prometheus.yaml"
+          image: prom/prometheus:v2.40.1
           ports:
             - containerPort: 9090
           volumeMounts:
@@ -63,10 +39,33 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: $CLUSTER_NAME
+  namespace: $NAME_SPACE
 spec:
   selector:
     app: prometheus
   ports:
     - port: 9090
       targetPort: 9090
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus
+  namespace: $NAME_SPACE
+data:
+  prometheus.yaml: |
+    global:
+      scrape_interval:     30s # Set the scrape interval to every 30 seconds.
+      evaluation_interval: 30s # Evaluate rules every 30 seconds.
+    remote_write:
+      - url: https://vm.monitoring.gcp.obol.tech/write
+        authorization:
+          credentials: $MONITORING_TOKEN
+    scrape_configs:
+      - job_name: 'charon'
+        static_configs:
+          - targets: ['charon:3620']
+      - job_name: 'teku'
+        static_configs:
+          - targets: ['teku:8008']   
+
