--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 CLUSTER_NAME=                       # charon cluster unique name to identify the cluster and use as k8s namespace
-CHARON_VERSION=                     # charon latest version
-TEKU_VERSION=                       # teku vc image version/tag, i.e 22.12.0
+CHARON_VERSION=                     # charon version
+TEKU_VERSION=                       # teku version
 BEACON_NODE_ENDPOINTS=              # comma separated list of beacon nodes endpoints
-MONITORING_TOKEN=                   # central monitoring token
+MONITORING_TOKEN=                   # obol central monitoring token
