--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ CHARON_VERSION=                     # charon version
 TEKU_VERSION=                       # teku version
 BEACON_NODE_ENDPOINTS=              # comma separated list of beacon nodes endpoints
 MONITORING_TOKEN=                   # obol central monitoring token
+CHARON_LOKI_ADDRESSES=              # enables sending of logfmt structured logs to these Loki log aggregation server addresses. This is in addition to normal stderr logs.
