--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-CLUSTER_NAME=                       # charon cluster unique name to identify the cluster and use as k8s namespace
 CHARON_VERSION=                     # charon version
 TEKU_VERSION=                       # teku version
 BEACON_NODE_ENDPOINTS=              # comma separated list of beacon nodes endpoints
 MONITORING_TOKEN=                   # obol central monitoring token
-LOKI_ADDRESSES=                     # enables sending of logfmt structured logs to these Loki log aggregation server addresses. This is in addition to normal stderr logs.
+LOKI_ADDRESSES=                     # central loki endpoint
